[gd_scene load_steps=6 format=3 uid="uid://cs7b2ikqj2nms"]

[ext_resource type="Script" uid="uid://dgk1vupdwmm31" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://biggigvsfkb2x" path="res://scenes/pipe_spawner.tscn" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://dqmpwp1cgqn4m" path="res://scripts/ui.gd" id="4_o6xl0"]
[ext_resource type="PackedScene" uid="uid://baqwnsu4b81oq" path="res://scenes/player.tscn" id="4_tbgi4"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_1bvp3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="PipeSpawner" parent="." instance=ExtResource("2_jyhfs")]
position = Vector2(576, 324)

[node name="Player" parent="." instance=ExtResource("4_tbgi4")]
position = Vector2(576, 324)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("4_o6xl0")

[node name="MainControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverScreen" type="ColorRect" parent="UI/MainControl"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.11, 0.124833, 0.364706)

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainControl/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -71.0
offset_right = 172.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="GameOverLabel" type="Label" parent="UI/MainControl/GameOverScreen/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.105882, 0.109804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 60
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartInfoLabel" type="Label" parent="UI/MainControl/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.498039, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 40
text = "Press Enter"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="UI/MainControl"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 11.0
offset_top = 13.0
offset_right = 162.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(1, 0.498039, 0.0666667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 40
text = "Score: 0"

[node name="Background" type="CanvasLayer" parent="."]
layer = -2

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3905, 0.59285, 0.71, 1)

[node name="FloorDeadzone" type="StaticBody2D" parent="."]
position = Vector2(0, 776)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDeadzone"]
shape = SubResource("WorldBoundaryShape2D_1bvp3")
